--- a/TV.html
+++ b/TV.html
@@ -56,7 +56,7 @@
         <br />
         <br />
         <model-viewer id="model-viewer" 
-        src="./assets/models/83C1_S.glb" 
+        src="./assets/models/RollableTVClipAnimation3.glb" 
         ios-src="./assets/models/83C1_S.usdz" 
         ar 
         camera-controls 
