--- a/TV.html
+++ b/TV.html
@@ -203,12 +203,12 @@
                 const animationLength = 8500; // ms
                 modelViewer.play();
 
-                self.setTimeout(()=>{
+                /*self.setTimeout(()=>{
                     modelViewer.pause();
                     BtnStatus = 'wait';
                     animationStatus.classList.remove('hide')
                     animationLoading.classList.add('hide');
-                }, animationLength);
+                }, animationLength);*/
             }
 
         }
