--- a/TV.html
+++ b/TV.html
@@ -177,13 +177,14 @@
 
                 const animationLength = 9930; // ms
                 modelViewer.play();
-                                
-                self.setTimeout(()=>{
-                    modelViewer.pause();
-                    BtnStatus = 'wait';
-                    animationStatus.classList.remove('hide')
-                    animationLoading.classList.add('hide');
-                }, animationLength);
+               self.setTimeout(()=>{modelViewer.pause();}, animationLength);
+
+                //self.setTimeout(()=>{
+                    //modelViewer.pause();
+                    //BtnStatus = 'wait';
+                   // animationStatus.classList.remove('hide')
+                    //animationLoading.classList.add('hide');
+               // }, animationLength);
             }
             else
             {
