--- a/TV.html
+++ b/TV.html
@@ -220,7 +220,7 @@
         const modelViewer = document.querySelector("model-viewer");
         modelViewer.addEventListener('play',()=>{
             console.log(modelViewer.animationName + 'play');
-            //modelViewer.currentTime = 0;
+            modelViewer.currentTime = 0;
         });
     </script>
 </html>
