--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -60,6 +60,8 @@
         <li><a href="./TestAR.html">TestAR</a></li>
         <li><a href="./TV.html">TV</a></li>
         <li><a href="./WashTower.html">WashTower</a></li>
+        <li><a href="./GIBOR.html">GIBOR</a></li>
+
     </ul>
 
 </body>
