--- a/GIBOR.html
+++ b/GIBOR.html
@@ -58,7 +58,7 @@
         <br />
         <br />
         <model-viewer id="model-viewer" 
-        src="./assets/models/SkyraORDR.glb" 
+        src="./assets/models/PL5_White.glb" 
         ios-src="" 
         ar 
         camera-controls 
@@ -96,7 +96,7 @@
                             <option value="VivacewasherBlack" >세탁기(블랙)</option>
                             <option value="VivacewasherWhite" >세탁기 (화이트)</option>
                         -->
-                        <option value="SkyraORDR" selected>SkyraORDR</option>
+                        <option value="PL5_White" selected>PL5_White</option>
                         <option value="ORT400" >ORT400</option>
                       </select>
                 </div>
