--- a/GIBOR.html
+++ b/GIBOR.html
@@ -58,8 +58,8 @@
         <br />
         <br />
         <model-viewer id="model-viewer" 
-        src="./assets/models/PL5_White.glb" 
-        ios-src="" 
+        src="./assets/models/SkyraOR.glb" 
+        ios-src="./assets/models/SkyraOR.glb" 
         ar 
         camera-controls 
         interaction-prompt="none"
@@ -96,7 +96,7 @@
                             <option value="VivacewasherBlack" >세탁기(블랙)</option>
                             <option value="VivacewasherWhite" >세탁기 (화이트)</option>
                         -->
-                        <option value="PL5_White" selected>PL5_White</option>
+                        <option value="SkyraOR" selected>SkyraOR</option>
                         <option value="ORT400" >ORT400</option>
                       </select>
                 </div>
