--- a/GIBOR.html
+++ b/GIBOR.html
@@ -59,7 +59,7 @@
         <br />
         <model-viewer id="model-viewer" 
         src="./assets/models/SkyraOR.glb" 
-        ios-src="./assets/models/SkyraOR.glb" 
+        ios-src="./assets/models/SkyraOR.usdz" 
         ar 
         camera-controls 
         interaction-prompt="none"
