--- a/GIBOR.html
+++ b/GIBOR.html
@@ -21,8 +21,8 @@
                 width: auto;
             }
             .btn-primary {
-                background-color: #b2073b;
-                border-color:  #b2073b;
+                background-color: #2da679;
+                border-color:  #2da679;
                 
                 border-radius: 40px;
             }
@@ -97,7 +97,7 @@
                             <option value="VivacewasherWhite" >세탁기 (화이트)</option>
                         -->
                         <option value="SkyraOR" selected>SkyraOR</option>
-                        <option value="ORT400" >ORT400</option>
+                       <!-- <option value="ORT400" >ORT400</option> -->
                       </select>
                 </div>
 
