--- a/AV.html
+++ b/AV.html
@@ -55,7 +55,7 @@
         <h2><b>AV</b></h2>
         <br />
         <br />
-        <audio controls autoplay>
+        <audio autoplay>
             <source src="../assets/sound/danchoi.mp3"" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
