--- a/AV.html
+++ b/AV.html
@@ -61,7 +61,8 @@
         </audio>
         <model-viewer id="model-viewer" 
         src="../assets/models/PL5_Black.glb" 
-        ios-src="../assets/models/PL5_Black.usdz" 
+        ios-src="../assets/models/PL5_Black.usdz"
+         <button slot="hotspot-visor" data-position="0 1.75 0.35" data-normal="0 0 1"></button>
         ar 
         camera-controls 
         interaction-prompt="none"
