--- a/AV.html
+++ b/AV.html
@@ -60,6 +60,11 @@
 
             Your browser does not support the audio element.
         </audio>
+        <style>
+            model-viewer#reveal {
+                --poster-color: transparent;
+            }
+        </style>
         <model-viewer id="model-viewer" 
         src="../assets/models/PL5_Black.glb" 
         ios-src="../assets/models/PL5_Black.usdz"
