--- a/AV.html
+++ b/AV.html
@@ -20,6 +20,15 @@
                 height: 50%;
                 width: auto;
             }
+            button{
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: blue;
+                    box-sizing: border-box;
+                  }
             .btn-primary {
                 background-color: #b2073b;
                 border-color:  #b2073b;
@@ -60,11 +69,6 @@
 
             Your browser does not support the audio element.
         </audio>
-        <style>
-            model-viewer#reveal {
-                --poster-color: transparent;
-            }
-        </style>
         <model-viewer id="model-viewer" 
         src="../assets/models/PL5_Black.glb" 
         ios-src="../assets/models/PL5_Black.usdz"
@@ -81,6 +85,7 @@
                
 
                 <button type="button" class="btn btn-danger hide"  id="animationBtn" onclick="animationPlay()"> 
+                    <button slot="hotspot-visor" data-position="0 1.75 0.35" data-normal="0 0 1"></button>
 
                     <span class="glyphicon glyphicon-off" aria-hidden="true" id="animationStatus"></span>
                       <div class="spinner-border spinner-border-sm hide" role="status" id="loadingAnimation">
