--- a/AV.html
+++ b/AV.html
@@ -20,15 +20,15 @@
                 height: 50%;
                 width: auto;
             }
-            button{
-                    display: block;
-                    width: 20px;
-                    height: 20px;
-                    border-radius: 10px;
-                    border: none;
-                    background-color: blue;
-                    box-sizing: border-box;
-                  }
+             button{
+                        display: block;
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 10px;
+                        border: none;
+                        background-color: blue;
+                        box-sizing: border-box;
+                      }
             .btn-primary {
                 background-color: #b2073b;
                 border-color:  #b2073b;
@@ -61,7 +61,7 @@
     </head>
     <div class="container">
         <br />
-        <h2><b>AV</b></h2>
+        <h2><b>XBoom Go</b></h2>
         <br />
         <br />
         <audio id="myAudio" loop>
@@ -69,6 +69,7 @@
 
             Your browser does not support the audio element.
         </audio>
+
         <model-viewer id="model-viewer" 
         src="../assets/models/PL5_Black.glb" 
         ios-src="../assets/models/PL5_Black.usdz"
@@ -83,9 +84,9 @@
             <div class="d-grid gap-2 col-1 mx-auto btnArea">
               
                
-                <button slot="hotspot-visor" data-position="0 1.75 0.35" data-normal="0 0 1"></button>
-
-                <button type="button" class="btn btn-danger hide"  id="animationBtn" onclick="animationPlay()"> 
+                <button slot="hotspot-2" class="hotspot selected" data-position="0.029252262789188063m 0.07782967224453471m 0.003319961837891343m" data-normal="-0.00003808194146596624m 0.9941993119684062m 0.10755336643412818m">
+                </button>             
+                   <button type="button" class="btn btn-danger hide"  id="animationBtn" onclick="animationPlay()"> 
 
                     <span class="glyphicon glyphicon-off" aria-hidden="true" id="animationStatus"></span>
                       <div class="spinner-border spinner-border-sm hide" role="status" id="loadingAnimation">
