--- a/TV.html
+++ b/TV.html
@@ -224,7 +224,7 @@
                     BtnStatus = 'wait';
                     animationStatus.classList.remove('hide')
                     animationLoading.classList.add('hide');
-                }, animationLength);* /
+                }, animationLength);
                 self.setTimeout(() => {
                     modelViewer.pause();
                 }, animationLength);
