--- a/TV.html
+++ b/TV.html
@@ -56,8 +56,8 @@
         <br />
         <br />
         <model-viewer id="model-viewer" 
-        src="./assets/models/RollableTVClipAnimation3.glb" 
-        ios-src="./assets/models/83C1_S.usdz" 
+        src="./assets/models/RollableTVClipAnimation.glb" 
+        ios-src="./assets/models/RollableTVClipAnimation.usdz" 
         ar 
         camera-controls 
         interaction-prompt="none"
