--- a/demo.html
+++ b/demo.html
@@ -82,7 +82,7 @@
 
       <div class='header'>
         <div class="headerTitle">
-          Jeeliz VTO Widget
+          Try on glazz before you order
         </div>      
       </div>
 
