--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="./TestAR.html">TestAR</a></li>
         <li><a href="./TV.html">TV</a></li>
         <li><a href="./WashTower.html">WashTower</a></li>
-        <li><a href="./demo.html">Glazz</a></li>
+        <li><a href="./glazz.html">Glazz</a></li>
 
 
     </ul>
