--- a/glazz.html
+++ b/glazz.html
@@ -119,7 +119,9 @@
         <!-- CHANGE MODEL BUTTONS: -->
         <div class='JeeWidgetControls' id='JeeWidgetChangeModelContainer'>
           <button onclick="JEEWIDGET.load('rayban_aviator_or_vertFlash')">Model 1</button>
-          <button onclick="JEEWIDGET.load('rayban_round_cuivre_pinkBrownDegrade')">Model 2</button>
+            <button onclick="JEEWIDGET.load_modelStandalone('glasses3D/glasses3Textured.json')">Model 2</button>
+
+          <!--><button onclick="JEEWIDGET.load('rayban_round_cuivre_pinkBrownDegrade')">Model 2</button>-->
           <button onclick="JEEWIDGET.load_modelStandalone('glasses3D/glasses1.json')">Model 3</button>
         </div>
 
