--- a/glazz.html
+++ b/glazz.html
@@ -35,7 +35,7 @@
       function main() {
         JEEWIDGET.start({
           sku: 'rayban_aviator_or_vertFlash',
-          searchImageMask: 'https://data.globalvision.ch/APP/GV/glazzAR/target%20GV_white%20version.png',
+          searchImageMask: 'https://github.com/dungnguyen234/dungnguyen234.github.io/blob/main/target%20GV_D.png',
           searchImageColor: 0xeeeeee,
           callbackReady: function(){
             console.log('INFO: Glazz is ready to try');
