--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><a href="./arTryOnFace/index.html">FaceTracking</a></li>
         <li><a href="./machine.html">Machine</a></li>
         <li><a href="./Webcar">Car showroom</a></li>
+        <li><a href="./webbuild">Room Decor</a></li>
 
 
 
