--- a/TV&AV/ar/r1.html
+++ b/TV&AV/ar/r1.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <head>
         <title>Web Model</title>
         <meta charset="utf-8">
@@ -27,8 +27,8 @@
         <div id="modelSizeDesc"></div>
         <br />
         <model-viewer id="model-viewer" 
-        src="./../assets/modelsels/48C1_S.glb" 
-        ios-src="./../assets/modelsels/48C1_S.usdz" 
+        src="/assets/modelsels/48C1_S.glb" 
+        ios-src="/assets/modelsels/48C1_S.usdz" 
         ar 
         camera-controls 
         interaction-prompt="none"
