--- a/TV&AV/ar/r1.html
+++ b/TV&AV/ar/r1.html
@@ -28,7 +28,7 @@
         <br />
         <model-viewer id="model-viewer" 
         src="/assets/models/TV/LG OLED C1/48C1/48C1_S.glb" 
-        ios-src="/assets/models/48C1_S.usdz" 
+        ios-src="/assets/models/TV/LG OLED C1/48C1/48C1_S.usdz" 
         ar 
         camera-controls 
         interaction-prompt="none"
