--- a/TV&AV/ar/c1.html
+++ b/TV&AV/ar/c1.html
@@ -27,8 +27,9 @@
         <div id="modelSizeDesc"></div>
         <br />
         <model-viewer id="model-viewer" 
-        src="./../assets/models/48C1_S.glb" 
-        ios-src="./../assets/models/48C1_S.usdz" 
+        
+        src="/assets/models/TV/LG OLED C1/48C1_S.glb" 
+        ios-src="/assets/models/TV/LG OLED C1/48C1_S.usdz" 
         ar 
         camera-controls 
         interaction-prompt="none"
