--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web AR技术实现3D模型动画</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>3D Character</title>
     <link href="styles/main.css" rel="stylesheet" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
-</head>
-<body>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/3.1.0/aframe/build/aframe-ar.js"></script>
+  </head>
+  <body>
     <div class="buttons">
-        <button class="switch-button">Next</button>
+      <button class="switch-button">Next</button>
     </div>
+
     <a-scene
-        renderer="antialias: auto;"
-        tune-renderer
+      renderer="antialias: auto;"
+      tune-renderer
+      embedded
+      arjs
+      vr-mode-ui="enabled: false"
     >
-        <a-assets>
-            <a-asset-item id="bot_dance" src="models/multi.glb"></a-asset-item>
-        </a-assets>
+      <a-assets>
+        <a-asset-item id="bot_dance" src="models/multi.glb"></a-asset-item>
+      </a-assets>
+      <a-marker id="animated-marker" preset="hiro">
         <a-entity
-            id="bot"
-            gltf-model="#bot_dance"
-            position="0 1 -2.1"
-            scale="2 2 2"
-            animation-mixer="clip: CatWalk"
+          id="bot"
+          gltf-model="#bot_dance"
+          position="0 0.8 -1"
+          scale="1 1 1"
+          animation-mixer="clip: CatWalk"
+          modify-materials
         ></a-entity>
-        <a-entity
-            environment="preset: forest; groundColor: #445; groundTexture: checkerboard;"></a-entity>
         <a-light type="ambient" color="#ffffff" intensity="1"></a-light>
         <a-light
-            type="directional"
-            color="#ffffff"
-            position="0 400 350"
-            intensity="2"
+          type="directional"
+          color="#ffffff"
+          position="0 400 350"
+          intensity="2"
         ></a-light>
-        <a-camera fov="45" near="1" far="2000"></a-camera>
+        <a-camera></a-camera>
+      </a-marker>
     </a-scene>
-    <script src="scripts/aframe-main.js"></script>
-</body>
+    <script src="scripts/ar-main.js"></script>
+  </body>
 </html>
