--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -106,8 +106,8 @@
         function onceSceneLoaded() {
             let raycaster = document.querySelector('[ar-raycaster]');
             let marker = document.querySelector('#intersection');
-            activateFox();
-
+            //activateFox();
+            activateDino();
             raycaster.addEventListener('raycaster-intersection', function (event) {
                 const intersection = event.detail.intersections[0]; //.find(i => i.object.type === 'Scene');
                 if (intersection) {
