--- a/examples/load-model.html
+++ b/examples/load-model.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 /*
  * Copyright 2017 Google Inc. All Rights Reserved.
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -99,8 +99,8 @@ var planeGeometry;
 var light;
 var directionalLight;
 
-var OBJ_PATH = './assets/ArcticFox_Posed.obj';
-var MTL_PATH = './assets/ArcticFox_Posed.mtl';
+var OBJ_PATH = '../assets/ArcticFox_Posed.obj';
+var MTL_PATH = '../assets/ArcticFox_Posed.mtl';
 var SCALE = 0.1;
 
 /**
