--- a/examples/anchors.html
+++ b/examples/anchors.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 /*
  * Copyright 2017 Google Inc. All Rights Reserved.
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -70,9 +70,9 @@
 <div id="info">
     <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a><span class="title">Tap to spawn and anchor objects at camera position</span>
 </div>
-<script src="../third_party/three.js/three.js"></script>
-<script src="../third_party/three.js/VRControls.js"></script>
-<script src="../dist/three.ar.js"></script>
+<script src="./third_party/three.js/three.js"></script>
+<script src="./third_party/three.js/VRControls.js"></script>
+<script src="./dist/three.ar.js"></script>
 <script>
 
 var vrDisplay;
