--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
     
     <ul>
         <li><a href="./examples/anchors.html">anchors</a></li>
-        <li><a href="./AV.html">LG XBoom go</a></li>
+        <li><a href="./examples/load-model.html">web Ar model</a></li>
         <li><a href="./Refrigerator.html">Refrigerator</a></li>
         <li><a href="./TVcategory.html">TV</a></li>
         <li><a href="./WashTower.html">WashTower</a></li>
