--- a/load-model.html
+++ b/load-model.html
@@ -77,11 +77,11 @@
     <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
   </span>
 </div>
-<script src="./third_party/three.js/three.js"></script>
-<script src="./third_party/three.js/VRControls.js"></script>
-<script src="./third_party/three.js/OBJLoader.js"></script>
-<script src="./third_party/three.js/MTLLoader.js"></script>
-<script src="./dist/three.ar.js"></script>
+<script src="third_party/three.js/three.js"></script>
+<script src="third_party/three.js/VRControls.js"></script>
+<script src="third_party/three.js/OBJLoader.js"></script>
+<script src="third_party/three.js/MTLLoader.js"></script>
+<script src="dist/three.ar.js"></script>
 <script>
 
 var vrDisplay;
@@ -99,8 +99,8 @@ var planeGeometry;
 var light;
 var directionalLight;
 
-var OBJ_PATH = './assets/ArcticFox_Posed.obj';
-var MTL_PATH = './assets/ArcticFox_Posed.mtl';
+var OBJ_PATH = '../assets/ArcticFox_Posed.obj';
+var MTL_PATH = '../assets/ArcticFox_Posed.mtl';
 var SCALE = 0.1;
 
 /**
