--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     
     <ul>
-        <li><a href="./examples/anchors.html">anchors</a></li>
-        <li><a href="./examples/load-model.html">web Ar model</a></li>
+        <li><a href="./anchors.html">anchors</a></li>
+        <li><a href="./load-model.html">web Ar model</a></li>
         <li><a href="./Refrigerator.html">Refrigerator</a></li>
         <li><a href="./TVcategory.html">TV</a></li>
         <li><a href="./WashTower.html">WashTower</a></li>
