--- a/TriipHP/index.html
+++ b/TriipHP/index.html
@@ -42,9 +42,9 @@ input {position: absolute; display: none}
       ar-modes="webxr scene-viewer quick-look">
       
      
-      <button slot="ar-button" id="ar-button" >
+      <!-- <button slot="ar-button" id="ar-button" >
           View in your space
-      </button>
+      </button> -->
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
