--- a/TriipHP/index.html
+++ b/TriipHP/index.html
@@ -37,6 +37,7 @@ input {position: absolute; display: none}
       alt="A HP"
       shadow-intensity="1.5"
       environment-image="neutral"
+      ar-scale="0.4"
       camera-controls
       auto-rotate ar
       ar-modes="webxr scene-viewer quick-look">
