update concept play vid

--- a/videoAR/index.html
+++ b/videoAR/index.html
@@ -85,7 +85,7 @@
   <body>
     <div id="scanning" class="hidden">
       <div class="inner">
-      <img src="./assets/targets/venom.jpeg"/>
+      <img src="./assets/targets/venom2.jpg"/>
       <div class="scanline"></div>
       </div>
       </div>
